<?xml version="1.0" encoding="utf-8"?>
<dev.oneuiproject.oneui.layout.ToolbarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:expanded="false"
    app:title="@string/labs">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/thumb_labs"/>

            <dev.oneuiproject.oneui.widget.Separator
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <dev.oneuiproject.oneui.widget.RoundLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/oui_background_color">
                <com.example.batteryosc.widget.CardView
                    android:id="@+id/card_prmtPath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:TitleText="@string/labs_parameterPath"
                    app:SummaryText="@string/labs_summary_parameterPath"
                    app:isToggleSwitch="true"/>
                <com.example.batteryosc.widget.CardView
                    android:id="@+id/card_btBattery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:isDividerViewVisible="true"
                    app:TitleText="@string/labs_bluetoothBattery"
                    app:SummaryText="@string/labs_summary_bluetoothBattery"
                    app:isToggleSwitch="true"/>
            </dev.oneuiproject.oneui.widget.RoundLinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</dev.oneuiproject.oneui.layout.ToolbarLayout>